--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "webdav": "^3.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
