fixed price rounding

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "round10": "^1.0.3",
     "webdav": "^3.6.2"
   },
   "devDependencies": {
